Renamed `rustc-private-link` to the more generic `build-utils`, as more stuff is intended to be added.

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,7 +11,7 @@ members = [
     "analysis/runtime",
     "dynamic_instrumentation",
     "pdg",
-    "rustc-private-link",
+    "build-utils",
 ]
 exclude = [
     "c2rust-macros",
