--- a/c2rust/Cargo.toml
+++ b/c2rust/Cargo.toml
@@ -27,7 +27,7 @@ shlex = "1.1"
 c2rust-transpile = { version = "0.16.0", path = "../c2rust-transpile" }
 
 [build-dependencies]
-rustc-private-link = { path = "../rustc-private-link" }
+build-utils = { path = "../build-utils" }
 
 [features]
 # Force static linking of LLVM
