--- a/c2rust-analyze/Cargo.toml
+++ b/c2rust-analyze/Cargo.toml
@@ -11,7 +11,7 @@ rustc-hash = "1.1.0"
 bitflags = "1.3.2"
 
 [build-dependencies]
-rustc-private-link = { path = "../rustc-private-link" }
+build-utils = { path = "../build-utils" }
 print_bytes = "0.6"
 
 [package.metadata.rust-analyzer]
