--- a/dynamic_instrumentation/Cargo.toml
+++ b/dynamic_instrumentation/Cargo.toml
@@ -9,7 +9,7 @@ bincode = "1.0.1"
 c2rust-analysis-rt = { path = "../analysis/runtime"}
 indexmap = "1.8"
 itertools = "0.10"
-lazy_static = "1.4"
+once_cell = "1.13"
 log = "0.4"
 fs-err = "2"
 clap = { version = "3.2", features = ["derive"] }
