Renamed `rustc-private-link` to the more generic `c2rust-build-paths`, as more code is intended to be added.

--- a/dynamic_instrumentation/Cargo.toml
+++ b/dynamic_instrumentation/Cargo.toml
@@ -22,7 +22,7 @@ fs2 = "0.4"
 env_logger = "0.9"
 
 [build-dependencies]
-rustc-private-link = { path = "../rustc-private-link" }
+c2rust-build-paths = { path = "../c2rust-build-paths" }
 
 [package.metadata.rust-analyzer] 
 rustc_private = true
