--- a/pdg/Cargo.toml
+++ b/pdg/Cargo.toml
@@ -17,7 +17,7 @@ linked_hash_set = "0.1"
 clap = { version = "3.2", features = ["derive"] }
 
 [build-dependencies]
-rustc-private-link = { path = "../rustc-private-link" }
+c2rust-build-paths = { path = "../c2rust-build-paths" }
 
 [dev-dependencies]
 insta = "1.15"
