--- a/analysis/test/Cargo.toml
+++ b/analysis/test/Cargo.toml
@@ -8,3 +8,6 @@ edition = "2021"
 [dependencies]
 libc = "0.2"
 c2rust-analysis-rt = { path = "../runtime", optional = true, version = "0.1.0" }
+
+[features]
+miri = []
