--- a/rust-toolchain.toml
+++ b/rust-toolchain.toml
@@ -1,3 +1,3 @@
 [toolchain]
 channel = "nightly-2022-08-08"
-components = ["rustfmt-preview", "rustc-dev", "rust-src"]
+components = ["rustfmt-preview", "rustc-dev", "rust-src", "miri"]
