--- a/c2rust-analyze/Cargo.toml
+++ b/c2rust-analyze/Cargo.toml
@@ -9,6 +9,9 @@ edition = "2021"
 polonius-engine = "0.13.0"
 rustc-hash = "1.1.0"
 bitflags = "1.3.2"
+c2rust-pdg = { path = "../pdg"}
+bincode = "1.0"
+serde = "1.0"
 
 [build-dependencies]
 c2rust-build-paths = { path = "../c2rust-build-paths" }
