--- a/pdg/Cargo.toml
+++ b/pdg/Cargo.toml
@@ -7,6 +7,7 @@ edition = "2021"
 bincode = "1.0"
 c2rust-analysis-rt = { path = "../analysis/runtime"}
 indexed_vec = "1.2"
+indexmap = "1.8"
 serde = { version = "1.0", features = ["derive"] }
 log = "0.4"
 env_logger = "0.9"
