--- a/c2rust/Cargo.toml
+++ b/c2rust/Cargo.toml
@@ -1,34 +1,34 @@
 [package]
-name = "c2rust"
-description = "C to Rust translation, refactoring, and cross-checking"
-version = "0.16.0"
 authors = ["The C2Rust Project Developers <c2rust@immunant.com>"]
-license = "BSD-3-Clause"
-homepage = "https://c2rust.com/"
-repository = "https://github.com/immunant/c2rust"
-edition = "2021"
 categories = ["development-tools", "development-tools::ffi", "command-line-utilities"]
-keywords = ["transpiler", "migration", "translation", "c"]
-readme = "README.md"
 default-run = "c2rust"
+description = "C to Rust translation, refactoring, and cross-checking"
+edition = "2021"
+homepage = "https://c2rust.com/"
+keywords = ["transpiler", "migration", "translation", "c"]
+license = "BSD-3-Clause"
+name = "c2rust"
+readme = "README.md"
+repository = "https://github.com/immunant/c2rust"
+version = "0.16.0"
 
 [badges]
-travis-ci = { repository = "immunant/c2rust" }
-azure-devops = { project = "immunant/c2rust", pipeline = "immunant.c2rust", build="1" }
+azure-devops = {project = "immunant/c2rust", pipeline = "immunant.c2rust", build = "1"}
+travis-ci = {repository = "immunant/c2rust"}
 
 [dependencies]
 anyhow = "1.0"
-clap = { version = "2.34", features = ["yaml"] }
+c2rust-transpile = {version = "0.16.0", path = "../c2rust-transpile"}
+clap = {version = "3", features = ["yaml", "cargo"]}
 env_logger = "0.9"
 git-testament = "0.2.1"
 is_executable = "1.0"
 log = "0.4"
 regex = "1.3"
 shlex = "1.1"
-c2rust-transpile = { version = "0.16.0", path = "../c2rust-transpile" }
 
 [build-dependencies]
-c2rust-build-paths = { path = "../c2rust-build-paths" }
+c2rust-build-paths = {path = "../c2rust-build-paths"}
 
 [features]
 # Force static linking of LLVM
