--- a/c2rust-ast-exporter/Cargo.toml
+++ b/c2rust-ast-exporter/Cargo.toml
@@ -20,12 +20,10 @@ serde_bytes = "0.11"
 serde_cbor = "0.11"
 
 [build-dependencies]
-bindgen = { version = "0.60", features = ["logging"] }
+bindgen = { version = "0.63", features = ["logging"] }
 clang-sys = "1.3"
-# Pinning until https://github.com/rust-lang/cmake-rs/issues/131 is resolved
-# Fixed by https://github.com/rust-lang/cmake-rs/pull/146 on 5/12/2022; waiting for next release.
-cmake = "=0.1.45"
-env_logger = "0.9"
+cmake = "0.1.49"
+env_logger = "0.10"
 c2rust-build-paths = { path = "../c2rust-build-paths" }
 
 [features]
