Moved `analysis/test` to `analysis/tests/misc` to prepare for more tests.

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -19,7 +19,7 @@ exclude = [
     "cross-checks/zero-malloc",
     "cross-checks/rust-checks",
     "examples",
-    "analysis/test",
+    "analysis/tests",
     "tests",
 ]
 
