--- a/analysis/tests/misc/Cargo.toml
+++ b/analysis/tests/misc/Cargo.toml
@@ -7,7 +7,7 @@ edition = "2021"
 
 [dependencies]
 libc = "0.2"
-c2rust-analysis-rt = { path = "../runtime", optional = true, version = "0.1.0" }
+c2rust-analysis-rt = { path = "../../runtime", optional = true, version = "0.1.0" }
 
 [features]
 miri = []
