--- a/analysis/tests/misc/Cargo.toml
+++ b/analysis/tests/misc/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "c2rust-analysis-test"
+name = "c2rust-analysis-tests-misc"
 version = "0.1.0"
 authors = ["The C2Rust Development Team <c2rust@immunant.com>",
            "Stephen Crane <sjc@immunant.com>"]
