--- a/c2rust-analyze/Cargo.toml
+++ b/c2rust-analyze/Cargo.toml
@@ -10,6 +10,7 @@ polonius-engine = "0.13.0"
 rustc-hash = "1.1.0"
 bitflags = "1.3.2"
 assert_matches = "1.5.0"
+indexmap = "1.9.2"
 
 [build-dependencies]
 c2rust-build-paths = { path = "../c2rust-build-paths" }
