Enable `CARGO_UNSTABLE_SPARSE_REGISTRY=true`/`cargo -Z sparse-registry` in CI, which shaves off an extra 20-30 seconds.
This is still unstable, but if there are any errors,
it'd be easy to revert this commit,
and it gives us an easy 20-30 second speedup for all CI jobs
before we have proper caching.

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -54,6 +54,7 @@ jobs:
       export CARGO_HOME=$AGENT_TEMPDIRECTORY/.cargo
       export RUSTFLAGS="-D warnings"
       export RUSTDOCFLAGS="-D warnings"
+      export CARGO_UNSTABLE_SPARSE_REGISTRY=true
       # Differs from `cargo build` since we can use `--all-features` here.
       # We plan to eventually replace `cargo check` with `cargo clippy`.
       cargo check --tests --all-features
@@ -126,6 +127,7 @@ jobs:
       export LLVM_CONFIG_PATH=$(brew --prefix llvm)/bin/llvm-config
       export RUSTFLAGS="-D warnings"
       export RUSTDOCFLAGS="-D warnings"
+      export CARGO_UNSTABLE_SPARSE_REGISTRY=true
       # Differs from `cargo build` since we can use `--all-features` here.
       # We plan to eventually replace `cargo check` with `cargo clippy`.
       cargo check --tests --all-features
