--- a/c2rust-analyze/Cargo.toml
+++ b/c2rust-analyze/Cargo.toml
@@ -18,6 +18,7 @@ print_bytes = "0.7"
 
 [dev-dependencies]
 c2rust-build-paths = { path = "../c2rust-build-paths" }
+insta = "1.17.1"
 
 [package.metadata.rust-analyzer]
 rustc_private = true
