--- a/c2rust-ast-exporter/Cargo.toml
+++ b/c2rust-ast-exporter/Cargo.toml
@@ -23,7 +23,7 @@ bindgen = { version = "0.63", features = ["logging"] }
 clang-sys = "1.3"
 cmake = "0.1.49"
 env_logger = "0.10"
-c2rust-build-paths = { path = "../c2rust-build-paths" }
+c2rust-build-paths = { path = "../c2rust-build-paths" , version = "0.17.0" }
 
 [features]
 default = []
