--- a/examples/robotfindskitten/repo/rust/Cargo.toml
+++ b/examples/robotfindskitten/repo/rust/Cargo.toml
@@ -9,7 +9,7 @@ name = "robotfindskitten"
 path = "src/robotfindskitten.rs"
 
 [dependencies]
-c2rust_runtime = { path = "../../../../c2rust-refactor/runtime" }
+c2rust_runtime = { path = "../../../../c2rust-refactor/runtime" , version = "0.17.0" }
 rand = "0.5.5"
 pancurses = "0.16.0"
 libc = "0.2"
