--- a/pdg/Cargo.toml
+++ b/pdg/Cargo.toml
@@ -13,7 +13,7 @@ categories.workspace = true
 
 [dependencies]
 bincode = "1.0"
-c2rust-analysis-rt = { path = "../analysis/runtime"}
+c2rust-analysis-rt = { path = "../analysis/runtime", version = "0.17.0" }
 indexed_vec = "1.2"
 indexmap = "1.8"
 serde = { version = "1.0", features = ["derive"] }
@@ -26,7 +26,7 @@ linked_hash_set = "0.1"
 clap = { version = "3.2", features = ["derive"] }
 
 [build-dependencies]
-c2rust-build-paths = { path = "../c2rust-build-paths" }
+c2rust-build-paths = { path = "../c2rust-build-paths" , version = "0.17.0" }
 
 [dev-dependencies]
 insta = "1.15"
