--- a/tests/asm.x86_64/Cargo.toml
+++ b/tests/asm.x86_64/Cargo.toml
@@ -5,4 +5,4 @@ edition = "2021"
 
 [dependencies]
 libc = "0.2"
-c2rust-asm-casts = { path = "../../c2rust-asm-casts" }
+c2rust-asm-casts = { path = "../../c2rust-asm-casts" , version = "0.17.0" }
