--- a/tests/structs/Cargo.toml
+++ b/tests/structs/Cargo.toml
@@ -4,6 +4,6 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
-c2rust-bitfields = { path = "../../c2rust-bitfields" }
+c2rust-bitfields = { path = "../../c2rust-bitfields" , version = "0.17.0" }
 memoffset = "0.2"
 libc = "0.2"
