Add `c2rust-bitfields-derive` to `workspace.members`.
Not sure why it wasn't there previously, as all other ones are,
including `c2rust-bitfields`, and it is similarly published and still used.

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,6 +8,7 @@ members = [
     "c2rust-ast-exporter",
     "c2rust-ast-printer",
     "c2rust-bitfields",
+    "c2rust-bitfields-derive",
     "c2rust-build-paths",
     "c2rust-transpile",
     "dynamic_instrumentation",
