--- a/pdg/Cargo.toml
+++ b/pdg/Cargo.toml
@@ -1,8 +1,15 @@
 [package]
 name = "c2rust-pdg"
-version = "0.1.0"
-edition = "2021"
+version.workspace = true
+authors.workspace = true
+edition.workspace = true
 description = "Pointer Derivation Graph used for dynamic analysis by C2Rust"
+readme.workspace = true
+homepage.workspace = true
+repository.workspace = true
+license.workspace = true
+keywords.workspace = true
+categories.workspace = true
 
 [dependencies]
 bincode = "1.0"
