--- a/analysis/runtime/Cargo.toml
+++ b/analysis/runtime/Cargo.toml
@@ -1,10 +1,15 @@
 [package]
 name = "c2rust-analysis-rt"
-version = "0.1.0"
-authors = ["The C2Rust Development Team <c2rust@immunant.com>",
-           "Stephen Crane <sjc@immunant.com>"]
-edition = "2021"
+version.workspace = true
+authors.workspace = true
+edition.workspace = true
 description = "C2Rust runtime for recording dynamic analysis, targeted by c2rust-instrument and consumed by c2rust-pdg"
+readme.workspace = true
+homepage.workspace = true
+repository.workspace = true
+license.workspace = true
+keywords.workspace = true
+categories.workspace = true
 
 [dependencies]
 serde = { version = "1.0", features = ["derive"] }
