--- a/c2rust-asm-casts/Cargo.toml
+++ b/c2rust-asm-casts/Cargo.toml
@@ -1,11 +1,14 @@
 [package]
 name = "c2rust-asm-casts"
-version = "0.2.0"
-authors = ["The C2Rust Project Developers <c2rust@immunant.com>"]
-edition = "2021"
-license = "BSD-3-Clause"
-homepage = "https://c2rust.com/"
-repository = "https://github.com/immunant/c2rust/tree/master/c2rust-asm-casts"
+version.workspace = true
+authors.workspace = true
+edition.workspace = true
 description = "Type cast helpers for use with C2Rust's inline assembly implementation"
+readme.workspace = true
+homepage.workspace = true
+repository.workspace = true
+license.workspace = true
+keywords.workspace = true
+categories.workspace = true
 
 [dependencies]
