--- a/c2rust-ast-builder/Cargo.toml
+++ b/c2rust-ast-builder/Cargo.toml
@@ -1,15 +1,15 @@
 [package]
 name = "c2rust-ast-builder"
-version = "0.16.0"
-authors = [
-  "The C2Rust Project Developers <c2rust@immunant.com>",
-  "Eric Mertens <emertens@galois.com>",
-]
-license = "BSD-3-Clause"
-homepage = "https://c2rust.com/"
-repository = "https://github.com/immunant/c2rust"
+version.workspace = true
+authors.workspace = true
+edition.workspace = true
 description = "Rust AST builder support crate for the C2Rust project"
-edition = "2021"
+readme.workspace = true
+homepage.workspace = true
+repository.workspace = true
+license.workspace = true
+keywords.workspace = true
+categories.workspace = true
 
 [dependencies]
 proc-macro2 = { version = "1.0", features = ["span-locations"]}
