--- a/c2rust-bitfields-derive/Cargo.toml
+++ b/c2rust-bitfields-derive/Cargo.toml
@@ -1,16 +1,15 @@
 [package]
 name = "c2rust-bitfields-derive"
-version = "0.2.1"
-authors = [
-    "The C2Rust Project Developers <c2rust@immunant.com>",
-    "Daniel Kolsoi <djk@immunant.com>",
-]
-license = "BSD-3-Clause"
-homepage = "https://c2rust.com/"
-repository = "https://github.com/immunant/c2rust/tree/master/c2rust-bitfields-derive"
-edition = "2021"
+version.workspace = true
+authors.workspace = true
+edition.workspace = true
 description = "C-compatible struct bitfield derive implementation used in the C2Rust project"
 readme = "README.md"
+homepage.workspace = true
+repository.workspace = true
+license.workspace = true
+keywords.workspace = true
+categories.workspace = true
 
 [dependencies]
 proc-macro2 = "1.0"
