--- a/c2rust-bitfields/Cargo.toml
+++ b/c2rust-bitfields/Cargo.toml
@@ -1,19 +1,18 @@
 [package]
 name = "c2rust-bitfields"
-version = "0.3.0"
-authors = [
-    "The C2Rust Project Developers <c2rust@immunant.com>",
-    "Daniel Kolsoi <djk@immunant.com>",
-]
-license = "BSD-3-Clause"
-homepage = "https://c2rust.com/"
-repository = "https://github.com/immunant/c2rust/tree/master/c2rust-bitfields"
-edition = "2021"
+version.workspace = true
+authors.workspace = true
+edition.workspace = true
 description = "C-compatible struct bitfield implementation used in the C2Rust project"
 readme = "README.md"
+homepage.workspace = true
+repository.workspace = true
+license.workspace = true
+keywords.workspace = true
+categories.workspace = true
 
 [dependencies]
-c2rust-bitfields-derive = { version = "0.2", path = "../c2rust-bitfields-derive" }
+c2rust-bitfields-derive = { version = "0.16.0", path = "../c2rust-bitfields-derive" }
 
 [dev-dependencies]
 libc = "0.2"
