--- a/c2rust-transpile/Cargo.toml
+++ b/c2rust-transpile/Cargo.toml
@@ -1,22 +1,21 @@
 [package]
 name = "c2rust-transpile"
-version = "0.16.0"
-authors = [
-  "The C2Rust Project Developers <c2rust@immunant.com>",
-  "Eric Mertens <emertens@galois.com>",
-  "Alec Theriault <atheriault@galois.com>",
-]
-license = "BSD-3-Clause"
-homepage = "https://c2rust.com/"
-repository = "https://github.com/immunant/c2rust"
+version.workspace = true
+authors.workspace = true
+edition.workspace = true
 description = "C2Rust transpiler implementation"
-edition = "2021"
+readme.workspace = true
+homepage.workspace = true
+repository.workspace = true
+license.workspace = true
+keywords.workspace = true
+categories.workspace = true
 
 [dependencies]
 c2rust-ast-builder = { version = "0.16.0", path = "../c2rust-ast-builder" }
 c2rust-ast-exporter = { version = "0.16.0", path = "../c2rust-ast-exporter" }
 c2rust-ast-printer = { version = "0.16.0", path = "../c2rust-ast-printer" }
-c2rust-bitfields = { version = "0.3.0", path = "../c2rust-bitfields" }
+c2rust-bitfields = { version = "0.16.0", path = "../c2rust-bitfields" }
 colored = "2.0"
 dtoa = "1.0"
 failure = "0.1.5"
