--- a/c2rust/Cargo.toml
+++ b/c2rust/Cargo.toml
@@ -1,15 +1,15 @@
 [package]
 name = "c2rust"
+version.workspace = true
+authors.workspace = true
+edition.workspace = true
 description = "C to Rust translation, refactoring, and cross-checking"
-version = "0.16.0"
-authors = ["The C2Rust Project Developers <c2rust@immunant.com>"]
-license = "BSD-3-Clause"
-homepage = "https://c2rust.com/"
-repository = "https://github.com/immunant/c2rust"
-edition = "2021"
-categories = ["development-tools", "development-tools::ffi", "command-line-utilities"]
-keywords = ["transpiler", "migration", "translation", "c"]
 readme = "README.md"
+homepage.workspace = true
+repository.workspace = true
+license.workspace = true
+keywords.workspace = true
+categories.workspace = true
 default-run = "c2rust"
 
 [badges]
