--- a/c2rust-analyze/Cargo.toml
+++ b/c2rust-analyze/Cargo.toml
@@ -17,6 +17,8 @@ rustc-hash = "1.1.0"
 bitflags = "1.3.2"
 assert_matches = "1.5.0"
 indexmap = "1.9.2"
+env_logger = "0.10.0"
+log = "0.4.17"
 
 [build-dependencies]
 c2rust-build-paths = { path = "../c2rust-build-paths" , version = "0.17.0" }
