--- a/c2rust/Cargo.toml
+++ b/c2rust/Cargo.toml
@@ -21,7 +21,7 @@ log = "0.4"
 env_logger = "0.7"
 regex = "1.3"
 shlex = "0.1"
-c2rust-transpile = { version = "0.15.1", path = "../c2rust-transpile" }
+###c2rust-transpile = { version = "0.15.1", path = "../c2rust-transpile" }
 c2rust-refactor = { version = "0.15.0", path = "../c2rust-refactor" }
 
 [build-dependencies]
@@ -30,5 +30,5 @@ chrono = "0.4"
 
 [features]
 # Force static linking of LLVM
-llvm-static = ["c2rust-transpile/llvm-static"]
+###llvm-static = ["c2rust-transpile/llvm-static"]
 profile = ["c2rust-refactor/profile"]
