--- a/c2rust/Cargo.toml
+++ b/c2rust/Cargo.toml
@@ -26,6 +26,8 @@ log = "0.4"
 regex = "1.3"
 shlex = "1.1"
 c2rust-transpile = { version = "0.17.0", path = "../c2rust-transpile" }
+# Required to avoid too-new version (dep of git-testament) which our rustc cannot compile
+time-macros = "=0.2.6"
 
 [build-dependencies]
 c2rust-build-paths = { path = "../c2rust-build-paths" , version = "0.17.0" }
