--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,6 +13,7 @@ members = [
     "c2rust-transpile",
     "dynamic_instrumentation",
     "pdg",
+    "remove-broken-fns",
 ]
 exclude = [
     "analysis/tests",
