--- a/c2rust-analyze/Cargo.toml
+++ b/c2rust-analyze/Cargo.toml
@@ -20,6 +20,7 @@ indexmap = "1.9.2"
 env_logger = "0.10.0"
 log = "0.4.17"
 backtrace = "0.3.67"
+itertools = "0.10"
 
 [build-dependencies]
 c2rust-build-paths = { path = "../c2rust-build-paths", version = "0.18.0" }
