(`c2rust-analyze`) Add `known_fns` for declaring the permissions of known (`libc`) `fn`s while also checking these definitions match `libc`'s.

--- a/c2rust-analyze/Cargo.toml
+++ b/c2rust-analyze/Cargo.toml
@@ -24,6 +24,7 @@ env_logger = "0.10.0"
 log = "0.4.17"
 backtrace = "0.3.67"
 itertools = "0.10"
+libc = "0.2.147"
 
 [build-dependencies]
 c2rust-build-paths = { path = "../c2rust-build-paths", version = "0.18.0" }
