--- a/c2rust-analyze/Cargo.toml
+++ b/c2rust-analyze/Cargo.toml
@@ -15,7 +15,7 @@ categories.workspace = true
 polonius-engine = "0.13.0"
 rustc-hash = "1.1.0"
 bitflags = "1.3.2"
-c2rust-pdg = { path = "../pdg"}
+c2rust-pdg = { path = "../pdg" }
 bincode = "1.0"
 serde = "1.0"
 assert_matches = "1.5.0"
@@ -25,6 +25,10 @@ log = "0.4.17"
 backtrace = "0.3.67"
 itertools = "0.10"
 libc = "0.2.147"
+clap = { version = "4.2.7", features = ["derive"] }
+fs-err = "2.9.0"
+anyhow = "1.0.75"
+toml_edit = "0.19.8"
 
 [build-dependencies]
 c2rust-build-paths = { path = "../c2rust-build-paths", version = "0.18.0" }
