--- a/dynamic_instrumentation/Cargo.toml
+++ b/dynamic_instrumentation/Cargo.toml
@@ -27,6 +27,7 @@ toml_edit = "0.19"
 fs2 = "0.4"
 env_logger = "0.10"
 tempfile = "3.3"
+rand = "0.8.5"
 
 [build-dependencies]
 c2rust-build-paths = { path = "../c2rust-build-paths", version = "0.19.0" }
