Keep track of unique projection combinations in Project
Add an index value to Project events to differentiate between
different projections with the same pointer offset, e.g.,
(*p).x and (*p).x.a if a is the first field of the structure.

This is implemented as an IndexSet<Vec<usize>> where each element
is a unique combination of field projections. The Project index
points to an element in this set.

--- a/analysis/runtime/Cargo.toml
+++ b/analysis/runtime/Cargo.toml
@@ -19,3 +19,4 @@ enum_dispatch = "0.3"
 fs-err = "2"
 crossbeam-queue = "0.3"
 crossbeam-utils = "0.8"
+indexmap = { version = "1.9", features = ["serde"] }
