dep: Remove time-macro pinning
The current nightly supports the latest time-macros (by a long time).
Not pinning again because more recent cargo versions can take care of
rust-version metadata in crates.

--- a/c2rust/Cargo.toml
+++ b/c2rust/Cargo.toml
@@ -26,8 +26,7 @@ log = "0.4"
 regex = "1.3"
 shlex = "1.3"
 c2rust-transpile = { version = "0.18.0", path = "../c2rust-transpile" }
-# Required to avoid too-new version (dep of git-testament) which our rustc cannot compile
-time-macros = "=0.2.6"
+time-macros = "0.2.18"
 
 [build-dependencies]
 c2rust-build-paths = { path = "../c2rust-build-paths", version = "0.18.0" }
