--- a/Cargo.toml
+++ b/Cargo.toml
@@ -27,6 +27,7 @@ exclude = [
 version = "0.19.0"
 authors = ["The C2Rust Project Developers <c2rust@immunant.com>"]
 edition = "2021"
+rust-version = "1.65"
 readme = "README.md"
 homepage = "https://c2rust.com/"
 repository = "https://github.com/immunant/c2rust/"
